lrg/prompting/templates/coverage-contradiction-tax/v0.2/turn3.md
<user> <ข้อกฎหมาย>
<law section=57 ฉ ประมวลรัษฎากร> ประมวลรัษฎากร มาตรา 57 ฉ ในการเก็บภาษีเงินได้จากสามีและภริยานั้น ให้สามีและภริยาต่างฝ่ายต่างมีหน้าที่ยื่นรายการเกี่ยวกับเงินได้พึงประเมินที่ตนได้รับในระหว่างปีภาษีที่ล่วงมาแล้วตามมาตรา 56
ในกรณีที่เงินได้พึงประเมินไม่อาจแยกได้อย่างชัดแจ้งว่าเป็นของสามีหรือภริยาแต่ละฝ่ายจำนวนเท่าใดให้ถือเป็นเงินได้พึงประเมินของสามีและภริยาฝ่ายละกึ่งหนึ่ง เว้นแต่เงินได้พึงประเมินตามมาตรา 40 (8) สามีและภริยาจะแบ่งเงินได้พึงประเมินเป็นของแต่ละฝ่ายตามส่วนที่ตกลงกันก็ได้ แต่รวมกันต้องไม่น้อยกว่าเงินได้พึงประเมินที่ได้รับ ถ้าตกลงกันไม่ได้ ให้ถือเป็นเงินได้พึงประเมินของสามีและภริยาฝ่ายละกึ่งหนึ่ง
สามีและภริยาจะตกลงยื่นรายการและเสียภาษีรวมกัน โดยให้ถือเอาเงินได้พึงประเมินของตนเป็นเงินได้ของสามีหรือภริยาอีกฝ่ายหนึ่งก็ได้ หรือจะแยกยื่นรายการและเสียภาษีเฉพาะส่วนที่เป็นเงินได้พึงประเมินตามมาตรา 40 (1) โดยมิให้ถือเอาเป็นเงินได้ของอีกฝ่ายหนึ่งก็ได้แต่ถ้ามีภาษีค้างชำระสามีและภริยาต้องร่วมรับผิดในการเสียภาษีที่ค้างชำระนั้น
เมื่อได้เลือกยื่นรายการตามวรรคสองและวรรคสามในปีภาษีใดแล้ว ให้ถือว่าเป็นวิธีการยื่นรายการสำหรับปีภาษีนั้นตลอดไป เว้นแต่อธิบดีจะอนุมัติให้เปลี่ยนแปลงวิธีการเลือกยื่นรายการดังกล่าว
</law>
<law section=40 ประมวลรัษฎากร> ประมวลรัษฎากร มาตรา 40 เงินได้พึงประเมินนั้นคือ เงินได้ประเภทดังต่อไปนี้ รวมตลอดถึงเงินค่าภาษีอากรที่ผู้จ่ายเงินหรือผู้อื่นออกแทนให้สำหรับเงินได้ประเภทต่าง ๆ ดังกล่าว ไม่ว่าในทอดใด
(1) เงินได้เนื่องจากการจ้างแรงงานไม่ว่าจะเป็นเงินเดือน ค่าจ้าง เบี้ยเลี้ยง โบนัส เบี้ยหวัด บำเหน็จ บำนาญ เงินค่าเช่าบ้าน เงินที่คำนวณได้จากมูลค่าของการได้อยู่บ้านที่นายจ้างให้อยู่โดยไม่เสียค่าเช่า เงินที่นายจ้างจ่ายชำระหนี้ใด ๆ ซึ่งลูกจ้างมีหน้าที่ต้องชำระ และเงินทรัพย์สิน หรือประโยชน์ใด ๆ บรรดาที่ได้เนื่องจากการจ้างแรงงาน
(2) เงินได้เนื่องจากหน้าที่หรือตำแหน่งงานที่ทำหรือจากการรับทำงานให้ ไม่ว่าจะเป็นค่าธรรมเนียม ค่านายหน้า ค่าส่วนลด เงินอุดหนุนในงานที่ทำ เบี้ยประชุม บำเหน็จ โบนัส เงินค่าเช่าบ้าน เงินที่คำนวณได้จากมูลค่าของการได้อยู่บ้านที่ผู้จ่ายเงินได้ให้อยู่โดยไม่เสียค่าเช่า เงินที่ผู้จ่ายเงินได้จ่ายชำระหนี้ใด ๆ ซึ่งผู้มีเงินได้มีหน้าที่ต้องชำระและเงิน ทรัพย์สิน หรือประโยชน์ใด ๆ บรรดาที่ได้เนื่องจากหน้าที่หรือตำแหน่งงานที่ทำหรือจากการรับทำงานให้นั้น ไม่ว่าหน้าที่หรือตำแหน่งงานหรืองานที่รับทำให้นั้นจะเป็นการประจำหรือชั่วคราว
(3) ค่าแห่งกู๊ดวิลล์ ค่าแห่งลิขสิทธิ์หรือสิทธิอย่างอื่นเงินปีหรือเงินได้มีลักษณะเป็นเงินรายปีอันได้มาจากพินัยกรรมนิติกรรมอย่างอื่น หรือคำพิพากษาของศาล
(4) เงินได้ที่เป็น
(ก) ดอกเบี้ยพันธบัตร ดอกเบี้ยเงินฝาก ดอกเบี้ยหุ้นกู้ ดอกเบี้ยตั๋วเงิน ดอกเบี้ยเงินกู้ยืมไม่ว่าจะมีหลักประกันหรือไม่ ดอกเบี้ยเงินกู้ยืมที่อยู่ในบังคับต้องถูกหักภาษีไว้ ณ ที่จ่ายตามกฎหมายว่าด้วยภาษีเงินได้ปิโตรเลียมเฉพาะส่วนที่เหลือจากถูกหักภาษีไว้ ณ ที่จ่ายตามกฎหมายดังกล่าว หรือผลต่างระหว่างราคาไถ่ถอนกับราคาจำหน่ายตั๋วเงินหรือตราสารแสดงสิทธิในหนี้ที่บริษัทหรือห้างหุ้นส่วนนิติบุคคล หรือนิติบุคคลอื่นเป็นผู้ออกและจำหน่ายครั้งแรกในราคาต่ำกว่าราคาไถ่ถอน รวมทั้งเงินได้ที่มีลักษณะทำนองเดียวกันกับดอกเบี้ย ผลประโยชน์หรือค่าตอบแทนอื่น ๆ ที่ได้จากการให้กู้ยืมหรือจากสิทธิเรียกร้องในหนี้ทุกชนิดไม่ว่าจะมีหลักประกันหรือไม่ก็ตาม
(ข) เงินปันผล เงินส่วนแบ่งของกำไร หรือประโยชน์อื่นใดที่ได้จากบริษัทหรือห้างหุ้นส่วนนิติบุคคล หรือสถาบันการเงินที่มีกฎหมายโดยเฉพาะของประเทศไทยจัดตั้งขึ้นสำหรับให้กู้ยืมเงินเพื่อส่งเสริมเกษตรกรรม พาณิชยกรรม หรืออุตสาหกรรม เงินปันผลหรือเงินส่วนแบ่งของกำไรที่อยู่ในบังคับต้องถูกหักภาษีไว้ ณ ที่จ่าย ตามกฎหมายว่าด้วยภาษีเงินได้ปิโตรเลียมเฉพาะส่วนที่เหลือจากถูกหักภาษีไว้ ณ ที่จ่ายตามกฎหมายดังกล่าว
เพื่อประโยชน์ในการคำนวณเงินได้ตามวรรคหนึ่ง ในกรณีที่บุตรชอบด้วยกฎหมายที่ยังไม่บรรลุนิติภาวะเป็นผู้มีเงินได้ และความเป็นสามีภริยาของบิดาและมารดาได้มีอยู่ตลอดปีภาษี ให้ถือว่าเงินได้ของบุตรดังกล่าวเป็นเงินได้ของบิดา แต่ถ้าความเป็นสามีภริยาของบิดาและมารดามิได้มีอยู่ตลอดปีภาษี ให้ถือว่าเงินได้ของบุตรดังกล่าวเป็นเงินได้ของบิดาหรือของมารดาผู้ใช้อำนาจปกครอง หรือของบิดาในกรณีบิดามารดาใช้อำนาจปกครองร่วมกัน
ความในวรรคสองให้ใช้บังคับกับบุตรบุญธรรมที่ยังไม่บรรลุนิติภาวะซึ่งเป็นผู้มีเงินได้ด้วยโดยอนุโลม
(ค)เงินโบนัสที่จ่ายแก่ผู้ถือหุ้น หรือผู้เป็นหุ้นส่วนในบริษัทหรือห้างหุ้นส่วนนิติบุคคล
(ง) เงินลดทุนของบริษัทหรือห้างหุ้นส่วนนิติบุคคลเฉพาะส่วนที่จ่ายไม่เกินกว่ากำไรและเงินที่กันไว้รวมกัน
(จ)เงินเพิ่มทุนของบริษัทหรือห้างหุ้นส่วนนิติบุคคลซึ่งตั้งจากกำไรที่ได้มาหรือเงินที่กันไว้รวมกัน
(ฉ)ผลประโยชน์ที่ได้จากการที่บริษัทหรือห้างหุ้นส่วนนิติบุคคล ควบเข้ากัน หรือรับช่วงกันหรือเลิกกัน ซึ่งตีราคาเป็นเงินได้เกินกว่าเงินทุน
(ช) ผลประโยชน์ที่ได้จากการโอนการเป็นหุ้นส่วน โอนหน่วยลงทุน หรือโอนหุ้น หุ้นกู้ พันธบัตร หรือตั๋วเงิน หรือตราสารแสดงสิทธิในหนี้ที่บริษัทหรือห้างหุ้นส่วนนิติบุคคลหรือนิติบุคคลอื่นเป็นผู้ออก รวมทั้งเงินได้จากการขายคืนหน่วยลงทุนให้แก่บริษัทหรือห้างหุ้นส่วนนิติบุคคลที่เป็นกองทุนรวม ทั้งนี้ เฉพาะซึ่งตีราคาเป็นเงินได้เกินกว่าที่ลงทุน
(ซ)เงินส่วนแบ่งของกำไร หรือผลประโยชน์อื่นใดในลักษณะเดียวกันที่ได้จากการถือหรือครอบครองโทเคนดิจิทัล
(ฌ)ผลประโยชน์ที่ได้รับจากการโอนคริปโทเคอร์เรนซีหรือโทเคนดิจิทัล ทั้งนี้ เฉพาะซึ่งตีราคาเป็นเงินได้เกินกว่าที่ลงทุน
(5) เงินหรือประโยชน์อย่างอื่นที่ได้เนื่องจาก
(ก) การให้เช่าทรัพย์สิน
(ข)การผิดสัญญาเช่าซื้อทรัพย์สิน
(ค) การผิดสัญญาซื้อขายเงินผ่อนซึ่งผู้ขายได้รับคืนทรัพย์สินที่ซื้อขายนั้นโดยไม่ต้องคืนเงินหรือประโยชน์ที่ได้รับไว้แล้ว
ในกรณี (ก)ถ้าเจ้าพนักงานประเมินมีเหตุอันควรเชื่อว่าผู้มีเงินได้แสดงเงินได้ต่ำไปไม่ถูกต้องตามความเป็นจริงเจ้าพนักงานประเมินมีอำนาจประเมินเงินได้นั้นตามจำนวนเงินที่ทรัพย์สินนั้นสมควรให้เช่าได้ตามปกติและให้ถือว่า จำนวนเงินที่ประเมินนี้เป็นเงินได้พึงประเมินของผู้มีเงินได้ในกรณีนี้จะอุทธรณ์การประเมินก็ได้ ทั้งนี้ ให้นำบทบัญญัติว่าด้วยการอุทธรณ์ตามส่วน2 หมวด 2 ลักษณะ 2 มาใช้บังคับโดยอนุโลม
ในกรณี (ข) และ (ค)ให้ถือว่าเงินหรือประโยชน์ที่ได้รับไว้แล้วแต่วันทำสัญญาจนถึงวันผิดสัญญาทั้งสิ้น เป็นเงินได้พึงประเมินของปีที่มีการผิดสัญญานั้น
(6) เงินได้จากวิชาชีพอิสระคือวิชากฎหมาย การประกอบโรคศิลป วิศวกรรม สถาปัตยกรรม การบัญชี ประณีตศิลปกรรมหรือวิชาชีพอิสระอื่นซึ่งจะได้มีพระราชกฤษฎีกากำหนดชนิดไว้
(7) เงินได้จากการรับเหมาที่ผู้รับเหมาต้องลงทุนด้วยการจัดหาสัมภาระในส่วนสำคัญนอกจากเครื่องมือ
(8) เงินได้จากการธุรกิจการพาณิชย์ การเกษตร การอุตสาหกรรม การขนส่ง หรือการอื่นนอกจากที่ระบุไว้ใน (1)ถึง (7) แล้ว
เงินค่าภาษีอากรตามวรรคหนึ่ง ถ้าผู้จ่ายเงินหรือผู้อื่นออกแทนให้สำหรับเงินได้ประเภทใด ไม่ว่าทอดใด หรือในปีภาษีใดก็ตาม ให้ถือเป็นเงินได้ประเภทและของปีภาษีเดียวกันกับเงินได้ที่ออกแทนให้นั้น
</law>
</ข้อกฎหมาย>
<ข้อหารือ> นาย ช. ได้ขออนุมัติเปลี่ยนแปลงวิธีการยื่นรายการและเสียภาษีสำหรับปีภาษี 2555 มีข้อเท็จจริงสรุปได้ว่า นาย ช. และภริยาจดทะเบียนสมรสกัน เมื่อวันที่ 1 พฤษภาคม 2550 ต่างฝ่ายต่างมีเงินได้พึงประเมินตามมาตรา 40 แห่งประมวลรัษฎากร และได้ยื่นรายการและเสียภาษีด้วยแบบแสดงรายการ ภ.ง.ด. 90 เมื่อวันที่ 21 กุมภาพันธ์ 2556 โดยนำเงินได้พึงประเมินของภริยามารวมคำนวณและเสียภาษีในนามของนาย ช. ตามมาตรา 57 ฉ วรรคสาม แห่งประมวลรัษฎากร และขอคืนเงินภาษีจำนวน 8,590.85 บาท ไว้แล้ว แต่ประสงค์จะขออนุมัติเปลี่ยนแปลงวิธีการยื่นรายการและเสียภาษีจากเดิมเป็นการยื่นรายการและเสียภาษีแยกต่างหากจากกัน </ข้อหารือ>
<reference_answer> อนุมัติให้ท่านทั้งสองเปลี่ยนแปลงวิธีการยื่นรายการและเสียภาษีตามที่ร้องขอได้ </reference_answer>
<student_answer> นาย ช. ต้องขออนุมัติจากอธิบดีเพื่อเปลี่ยนแปลงวิธีการยื่นรายการและเสียภาษีจากการยื่นรวมเป็นการยื่นแยกต่างหาก </student_answer>

<assistant> ```json
{"coverage": {"thought": "Caution:
    1. MAKE SURE TO PROVIDE A REASONABLE THOUGHT PROCESS AS WELL.
    2. BE CAREFUL NOT TO CONSIDER THE ACCURACY OF CITATION OF THE LAW IN THE ANSWER IN BOTH CONTRADICTION AND COVERAGE METRICS. THERE IS A SEPARATE METRIC FOR THAT. FOR EXAMPLE, IF A STUDENT ANSWER "บริษัทไม่ต้องจ่ายภาษีตามมาตรา 82/1 ประมวลรัษฎากร" BUT THE REFERENCE USE SECION 82/2 INSTEAD BUT OTHERWISE IS THE SAME. THE COVERAGE SCORE IS 100 WHILE THE CONTRADICTION SCORE IS 0. PLEASE BE VERY CAREFUL OF THIS!!!
    3. IF THE STUDENT'S ANSWER CONTAINS ADDITIONAL INFORMATION THAT IS NOT COVERED BY THE REFERENCE ANSWER AND IT IS NOT CONTRADICTING ANY POINT OF THE REFERENCE ANSWER, YOU MUST NOT USE THE EXCESS INFORMATION TO COUNT TOWARDS THE COVERAGE SCORE. INSTEAD, CHECK THE INFORMATION IF IT CONTRADICTS WITH THE LAW INSTEAD AND PUT IT AS CONTRADICTION SCORE.
    4. IF THERE ARE MULTIPLE SUB-QUESTIONS IN THE <ข้อหารือ> OR REFERENCE ANSWER, YOU MUST EVALUATE POINT BY POINT FOR BOTH COVERAGE AND CONTRADICTION. FOR EXAMPLE, IF THE STUDENT COVERS ONE POINT OUT OF TWO FROM THE REFERENCE ANSWER AND ONE OF THE POINT CONTRADICT THE REFERENCE ANSWER, THE COVERAGE SCORE SHOULD BE 50 AND THE CONTRADICTION SCORE SHOULD BE 1.
    5. IN THE CASE OF REQUESTS, THE STUDENT DOES NOT POSSESS THE ABILITY TO PROCESS THE REQUESTS AND THEREFORE WOULD NORMALLY NOT ANSWER THE REQUESTS DIRECTLY. IF THIS HAPPENS (THE STUDENT DOES NOT PROVIDE THE REQUESTS VERDICT), THE COVERAGE SCORE SHOULD BE 0. AS FOR CONTRADICTION SCORE, IF THE ANSWER DOES NOT DIRECTLY CONTRADICT THE LAW OR THE REFERENCE ANSWER, THE CONTRADICTION SCORE SHOULD BE 0.
    
    From the given reference answer and student answer, the reference answer and student answer only contain one point and the reference answer is making only one point which is allowing the two of the complainants the ability to refile the tax forms. However, the student answer only states that Mr.ช. must request approval from the director-general for the refiling of the tax forms and does not cover the same point the reference answer is making. Therefore, it would get the coverage score of 0.", "grade": 0}, "contradiction": {"thought": "From the given reference answer and student answer, even though the student answer does not cover the same point that the reference answer is making. It does not directly contradict the reference answer either and therefore would get the score 0 for contradiction", "grade": 0}}
```